ajouter de la bibliothèque swiper js

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Responsive Slide Card</title>
     <!--CSS Link-->
     <link rel="stylesheet" href="css/styles.css">
+    <!--Swiper CSS-->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 <body>
-    <div class="silde-container">
+    <div class="silde-container swiper">
         <div class="slide-content">
-            <div class="card-wrapper">
-                <div class="card">
+            <div class="card-wrapper swiper-wrapper">
+                <div class="card swiper-slide">
                     <div class="image-content">
                         <span class="overlay"></span>
 
@@ -23,12 +25,139 @@
                     <div class="card-content">
                         <h2 class="name">Jean Parfait</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
-                        
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg2.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg3.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg4.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg5.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg6.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg7.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg8.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
+                        <button class="button">View More</button>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
+
+                        <div class="card-image">
+                            <img src="images/storyg4.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h2 class="name">Jean Parfait</h2>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
+
                         <button class="button">View More</button>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
     </div>
+    <!-- Swiper JS-->
+    <script src="js/swiper-bundle.min.js"></script>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
