--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Selomin Coding-->
+<!--Selomin Coding Responsive card sile with swiper js-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
