--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Kora Smith</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Philipe Cosmo</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Victor Lapierre</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Celine Simone</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Xixise Kiolo</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Pithona Sqilaw</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Ferdinand Boiting</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name">Jean Parfait</h2>
+                        <h2 class="name">Gislain Portinos</h2>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo iusto mollitia fugit repellat provident in nulla tenetur quis assumenda similique, aliquid animi eaque vero culpa incidunt necessitatibus asperiores. Dolorum.</p>
 
                         <button class="button">View More</button>
